--- a/tech.html
+++ b/tech.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link href="style.css" rel="stylesheet"/>
+    </head>
     <body style="background-image:url('/assets/render.jpg')">
         <div style="text-align: center;">
             <div style="width: 500px; margin: 0 auto;">
