--- a/tech.html
+++ b/tech.html
@@ -37,7 +37,7 @@
 
     <div class="cols">
         <!-- Container 1, static donation -->
-<!--        <div class="container con1 text">-->
+        <div class="container con1 text">
 <!--            2b2tau runs on automated payments it at least $85 USD for it to pay for itself at the end of every month.-->
 <!--            <p>If donations aren't reached for any month, I will attempt to pay the rest of the amount if it isn't a significant amount.</p>-->
 <!--            <p><strong>Otherwise, I will be publicly releasing the world as a torrent and shutting the server down.</strong></p>-->
@@ -55,7 +55,7 @@
 <!--            &lt;!&ndash;            <input type="image" src="https://www.paypalobjects.com/en_AU/i/btn/btn_donateCC_LG.gif" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />&ndash;&gt;-->
 <!--            &lt;!&ndash;            <img src="https://www.paypal.com/en_AU/i/scr/pixel.gif" width="1" height="1"  alt=""/>&ndash;&gt;-->
 <!--            &lt;!&ndash;        </form>&ndash;&gt;-->
-<!--        </div>-->
+        </div>
         <!-- Container 1 end -->
 
         <!-- Container 2, main content, editable -->
@@ -182,9 +182,9 @@
         <!-- Container 2 end -->
 
         <!-- Container 3 -->
-<!--        <div class="container con3">-->
+        <div class="container con3">
 
-<!--        </div>-->
+        </div>
         <!-- Container 3 end -->
     </div>
 
