--- a/tech.html
+++ b/tech.html
@@ -31,7 +31,7 @@
 
     <!-- Start of navigation -->
     <div class="navigation">
-<!--        <a href="#main" class="panel">MAIN</a> <span class="raquo">&raquo;</span> <a class="panel" href="https://discord.gg/fuQ8rTekWb" target="_blank">DISCORD</a> <span class="raquo">&raquo;</span> <a href="https://www.reddit.com/r/2b2tAU/" target="_blank" class="panel">REDDIT</a>-->
+        <a>APPLY FOR WHITELIST</a>
     </div>
     <!-- End of navigation -->
 
