--- a/tech.html
+++ b/tech.html
@@ -3,9 +3,10 @@
         <link href="tech.css" rel="stylesheet"/>
     </head>
     <body style="background-image:url('/assets/MesaQuarry.png')">
-        <div style="text-align: center;">
+        <div>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSel-o7dzIG4n3OJ5A-RjwOnPzH0aWz6bP9UV7FwM5kR_IaOhA/viewform?embedded=true" width="640" height="382" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             <div style="width: 500px; margin: 0 auto; background: #000; color: #fff;">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSel-o7dzIG4n3OJ5A-RjwOnPzH0aWz6bP9UV7FwM5kR_IaOhA/viewform?embedded=true" width="640" height="382" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
             </div>
         </div>
     </body>
